fix: vidoe url randaring issue
